darwin: adds universal target to default config file

--- a/config/darwin.config
+++ b/config/darwin.config
@@ -25,6 +25,11 @@ elif target_arch == Architecture.PPC:
     prefix=prefix or os.path.expanduser('~/cerbero/dist/osx_ppc')
     sources=sources or os.path.expanduser('~/cerbero/sources/osx_ppc')
     cache_file='osx_ppc'
+elif target_arch == Architecture.UNIVERSAL:
+    build='universal-apple-darwinx'
+    prefix=prefix or os.path.expanduser('~/cerbero/dist/universal')
+    sources=sources or os.path.expanduser('~/cerbero/sources/universal')
+    cache_file='osx_universal'
 
 if distro_version == DistroVersion.OS_X_LEOPARD:
     # autotools in OSX 10.5 (Leopard) are a bit oldy/broken.
