add MIPS support

--- a/config/android.config
+++ b/config/android.config
@@ -14,6 +14,10 @@ elif target_arch == Architecture.X86:
     tools_prefix = 'i686-linux-android'
     arch = 'x86'
     tc_path = 'x86-4.6'
+elif target_arch == Architecture.MIPS:
+    tools_prefix = 'mipsel-linux-android'
+    arch = 'mips'
+    tc_path = 'mipsel-linux-android-4.6'
 else:
   raise FatalError("Arch not supported")
 
@@ -41,7 +45,7 @@ ccache = use_ccache and 'ccache ' or ''
 
 defines = '-DANDROID -DPIC'
 cflags = '--sysroot=%s -I%s/usr/include -ffunction-sections -funwind-tables -fPIC' % (sysroot, sysroot)
-ldflags = '--sysroot=%s -fPIC -Wl,-no-undefined -Wl,-z,noexecstack -Wl,-z,relro -Wl,-z,now -Wl,--gc-sections -Wl,-z,nocopyreloc -Wl,-dynamic-linker,/system/bin/linker -L%s/usr/lib ' % (sysroot, sysroot)
+ldflags = '--sysroot=%s -fPIC -Wl,-no-undefined -Wl,-z,noexecstack -Wl,-z,relro -Wl,-z,now -Wl,--gc-sections -Wl,-z,nocopyreloc -Wl,-dynamic-linker,/system/bin/linker -Wl,-rpath -Wl,%s/usr/lib -L%s/usr/lib ' % (sysroot, sysroot, sysroot)
 
 # from android-ndk-r8b/toolchains/$NAME-$VERSION/setup.mk
 if target_arch in [Architecture.ARM, Architecture.ARMv7]:
@@ -54,7 +58,8 @@ if target_arch in [Architecture.ARM, Architecture.ARMv7]:
         ldflags += " -Wl,--fix-cortex-a8 "
 if target_arch == Architecture.X86:
     cflags += ' -march=i686 -fomit-frame-pointer -fstrict-aliasing -funswitch-loops -finline-limit=300'
-
+if target_arch == Architecture.MIPS:
+    cflags += ' -march=mips32 -mtune=mips32 -mips32 -mhard-float'
 
 # Toolchain environment
 os.environ['CPPFLAGS'] = '--sysroot=%s -I%s/usr/include %s' % (sysroot, sysroot, defines)
@@ -66,10 +71,10 @@ def cmd(command):
     return '%s-%s' % (tools_prefix, command)
 
 os.environ['CC']= '%s%s' % (ccache, cmd('gcc'))
-os.environ['CC'] += ' -fuse-ld=gold'
+os.environ['CC'] += ' -fuse-ld=bfd'
 os.environ['CXX']= '%s%s' % (ccache, cmd('g++'))
-os.environ['CXX'] += ' -fuse-ld=gold'
-os.environ['LD']= cmd('ld.gold')
+os.environ['CXX'] += ' -fuse-ld=bfd'
+os.environ['LD']= cmd('ld.bfd')
 os.environ['CPP']= cmd('cpp')
 os.environ['RANLIB']= cmd('ranlib')
 os.environ['AR']= cmd('ar')
@@ -90,6 +95,7 @@ os.environ['ac_cv_func_posix_getpwuid_r'] = 'no'
 os.environ['ac_cv_func_nonposix_getpwuid_r'] = 'no'
 os.environ['ac_cv_func_posix_getgrgid_r'] = 'no'
 os.environ['ac_cv_func_nonposix_getgrgid_r'] = 'no'
+os.environ['ac_cv_c_bigendian'] = 'no'
 
 # For pixman
 os.environ['ac_cv_tls'] = 'none'
